adde button and img

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     </head>
     <body>
         <div>
-            <img src="./img/white_lamp.png" alt>
-            <img src="./img/yellow_lamp.png" alt>
+            <img id="myImage" width="200"
+                src="./img/white_lamp.png" alt>
+
+            <button>Accendi</button>
+            <button>Spegni</button>
+
         </div>
 
         <script src="./js/main.js"></script>
