created my first var

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
             <img id="myImage" width="200"
                 src="./img/white_lamp.png" alt>
 
-            <button>Accendi</button>
-            <button>Spegni</button>
+            <button onclick="toggleLamp()">Accendi</button>
 
         </div>
 
